# bevy_triplanar_splatting

./: .gitattributes  Cargo.toml  README.md  flake.nix
assets/: compress_textures.py
assets/array_material/: albedo.basis  albedo.ktx2  ao.basis  ao.ktx2  depth.ktx2  metal_rough.basis  metal_rough.ktx2  normal.basis_linear  normal.ktx2
assets/shaders/: triplanar.wgsl  triplanar_material.wgsl  triplanar_material_frag.wgsl  triplanar_material_vert.wgsl
examples/: render.rs
src/: basis_linear_loader.rs  lib.rs  plugin.rs  triplanar_material.rs
src/shaders/: biplanar.wgsl  triplanar.wgsl
