[package]
name = "bevy_triplanar_splatting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "ktx2",
    "tonemapping_luts",
    "zstd",
]

[dev-dependencies]
smooth-bevy-cameras = "0.10"

[[example]]
name = "render"
required-features = ["bevy/x11", "bevy/basis-universal"]
